# adyd_detector_api

./: README.md  pyproject.toml
adyd_detector_api/: openapi.yaml
